update doc + start what's next document

--- a/doc/getting_started.ipynb
+++ b/doc/getting_started.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,6 +117,15 @@
     "\n",
     "# You can also set which wires you want to act on explicitely\n",
     "dev = qml.device(\"monarq.default\", client=my_client, wires=[0, 1, 2], shots=1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It should be noted that because you specify wires on gates and on your device does not mean that those wires will be used on MonarQ. \n",
+    "\n",
+    "For more information, see [using transpiler](using_transpiler.ipynb)"
    ]
   },
   {
@@ -160,6 +169,13 @@
     "\n",
     "# this wil show you what your circuit looks like\n",
     "print(qml.draw(circuit)())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For more information  about pennylane operations, click [here](https://docs.pennylane.ai/en/stable/introduction/operations.html)"
    ]
   },
   {
