--- a/doc/using_client.ipynb
+++ b/doc/using_client.ipynb
@@ -11,7 +11,7 @@
     "- host : the url to which monarq can be communicated with.\n",
     "- user : your identifier\n",
     "- access token : the access pass that identifies you as a rightful user\n",
-    "- realm : usually \"calculqc\""
+    "- project name : (optional) the name of the project you want to run the job on "
    ]
   },
   {
