--- a/doc/using_custom_gates.ipynb
+++ b/doc/using_custom_gates.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -41,6 +41,7 @@
     "\n",
     "# import pennylane-specific functions\n",
     "import pennylane as qml\n",
+    "\n",
     "import numpy as np\n",
     "from pennylane.operation import Operation\n",
     "\n",
@@ -49,6 +50,17 @@
     "def print_matrix(op : Operation):\n",
     "    print(op.name + \" : \")\n",
     "    print(f\"{op.matrix()}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### qml gates and custom gates\n",
+    "\n",
+    "You might have noticed that we import ```pennylane as qml``` and ```custom_gates as custom```. \n",
+    "\n",
+    "That is because not all the gates in MonarQ exist in pennylane. We thus had to add custom pennylane operations in order to cover all of MonarQ's native gate set.   "
    ]
   },
   {
@@ -438,6 +450,13 @@
     "client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project name\")\n",
     "\n",
     "dev = qml.device(\"monarq.default\", shots=1000, client = client)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For more information  about pennylane operations, click [here](https://docs.pennylane.ai/en/stable/introduction/operations.html)"
    ]
   }
  ],
