--- a/doc/using_custom_steps.ipynb
+++ b/doc/using_custom_steps.ipynb
@@ -18,25 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Detected IPython. Loading juliacall extension. See https://juliapy.github.io/PythonCall.jl/stable/compat/#IPython\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\bouch\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pennylane\\__init__.py:200: PennyLaneDeprecationWarning: Device will no longer be accessible top level. Please access the class as pennylane.devices.LegacyDevice\n",
-      "  warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pennylane_snowflurry.processing.config import MonarqDefaultConfig\n",
     "from pennylane_snowflurry.processing.steps import ReadoutErrorMitigation\n",
@@ -56,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,24 +54,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# toy preprocessing step for printing the circuit\n",
+    "# toy preprocessing step for printing the circuit operations\n",
     "class PrintCircuit(PreProcStep):\n",
     "    def execute(self, tape):\n",
-    "        print([op.name for op in tape.operations])\n",
+    "        print(*tape.operations)\n",
+    "        return tape\n",
     "        \n",
     "# toy postprocessing step for printing the results\n",
     "class PrintResults(PostProcStep):\n",
     "    def execute(self, tape, results):\n",
-    "        print(results)"
+    "        print(results)\n",
+    "        return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,6 +89,58 @@
     "                             PrintResults(),\n",
     "                             ReadoutErrorMitigation(), \n",
     "                             PrintResults())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### let's try our config with custom steps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: ──H─╭●────┤  Counts\n",
+      "1: ────╰X─╭●─┤  Counts\n",
+      "2: ───────╰X─┤  Counts\n",
+      "H(0) CNOT(wires=[0, 1]) CNOT(wires=[1, 2])\n",
+      "X90(wires=[1]) X90(wires=[4]) Z(4) CZ(wires=[1, 4]) X90(wires=[4]) X90(wires=[0]) Z(0) CZ(wires=[4, 0]) X90(wires=[0])\n",
+      "{'000': 376, '001': 38, '010': 44, '011': 58, '100': 126, '101': 65, '110': 98, '111': 195}\n",
+      "{'000': 418.0, '001': 16.0, '010': 12.0, '011': 61.0, '100': 87.0, '101': 20.0, '110': 71.0, '111': 315.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pennylane as qml\n",
+    "from pennylane_snowflurry.API.client import MonarqClient\n",
+    "\n",
+    "# Change the values in the parentheses for your credentials\n",
+    "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")\n",
+    "\n",
+    "dev = qml.device(\"monarq.default\", client=my_client, processing_config = my_config, shots=1000)\n",
+    "\n",
+    "# a simple ghz circuit\n",
+    "@qml.qnode(dev)\n",
+    "def circuit():\n",
+    "    qml.Hadamard(wires=0)\n",
+    "    qml.CNOT(wires=[0, 1]) \n",
+    "    qml.CNOT([1, 2])\n",
+    "    return qml.counts()\n",
+    "\n",
+    "# lets print the circuit\n",
+    "print(qml.draw(circuit)())\n",
+    "\n",
+    "results = circuit()\n",
+    "\n",
+    "# you don't have to print results, since they are printed as a post processing step!\n",
+    "# print(results)"
    ]
   }
  ],
