--- a/doc/using_transpiler.ipynb
+++ b/doc/using_transpiler.ipynb
@@ -6,7 +6,13 @@
    "source": [
     "## MonarQ's transpiler\n",
     "\n",
-    "MonarQ's transpiler is typically used behind the scene when you use the \"monarq.default\" device"
+    "The gates and wires that you set in your circuit will not necessarly be used as is on MonarQ itself. \n",
+    "\n",
+    "Indeed, MonarQ has a specific connectivity and set of gates that limit what arrangement of gates and wires can be used. \n",
+    "\n",
+    "This is what the process of transpiling is about. monarq.default chooses qubits to act on, and native operations to represent your circuit behind the scene.\n",
+    "\n",
+    "You typically don't have to do anything in order to have the transpiling occur on your circuit."
    ]
   },
   {
@@ -32,8 +38,6 @@
    ],
    "source": [
     "from pennylane_snowflurry.API.client import MonarqClient\n",
-    "from pennylane_snowflurry.processing.config import MonarqDefaultConfig\n",
-    "from pennylane_snowflurry.processing.steps import ISMAGS\n",
     "import pennylane as qml"
    ]
   },
@@ -55,7 +59,7 @@
     "client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")\n",
     "\n",
     "# no configuration argument => config is set to MonarqDefaultConfig\n",
-    "dev = qml.device(\"monarq.default\", shots=1000, client=client) \n",
+    "dev = qml.device(\"monarq.default\", shots=1000, wires=[0, 1, 2], client=client) \n",
     "\n",
     "@qml.qnode(dev)\n",
     "def circuit():\n",
@@ -64,7 +68,7 @@
     "    qml.CNOT([1, 2])\n",
     "    return qml.counts(wires=[0, 1, 2])\n",
     "\n",
-    "results = circuit()\n",
+    "results = circuit() # transpiling happens automatically, and your circuit is executed on MonarQ\n",
     "print(results)"
    ]
   },
@@ -85,97 +89,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is possible to change the behaviour of the transpiler by changing steps, or adding new ones"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pennylane_snowflurry.processing.steps import ReadoutErrorMitigation\n",
+    "### Configurations\n",
     "\n",
-    "my_config = MonarqDefaultConfig() # this is the usual behaviour\n",
+    "It is possible to change the behaviour of the transpiler by explicitely setting which configuration should be used. \n",
     "\n",
-    "ismags_placement = ISMAGS() # this is an alternative placement method that uses subgraph isomorphism\n",
+    "This allows you to change transpiling steps, or even add new steps to the processing pipelines.\n",
     "\n",
-    "my_config.steps[1] = ismags_placement # the placement step is 2nd. change it for the new one\n",
-    "my_config.steps.append(ReadoutErrorMitigation())\n",
-    "dev = qml.device(\"monarq.default\", shots=1000, client=client, processing_config=my_config) # set the config explicitely"
+    "See [configurations](using_configurations.ipynb) for more information."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also use the transpiler in a standalone manner if need be. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pennylane_snowflurry.processing import PreProcessor\n",
-    "from pennylane.tape import QuantumTape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[H(0), CNOT(wires=[0, 1])]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# create a QuantumTape (this is one way to do it, but you can also retrieve it from a QNode)\n",
+    "### Steps\n",
     "\n",
-    "ops = [qml.Hadamard(0), qml.CNOT([0, 1])]\n",
-    "measurements = [qml.counts(wires=[0, 1])]\n",
-    "shots = 1000\n",
+    "You can also create new, custom steps to add to the processing pipeline. \n",
     "\n",
-    "tape = QuantumTape(ops=ops, measurements=measurements, shots=shots)\n",
-    "\n",
-    "tape.operations\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[X90(wires=[0]), X90(wires=[4]), Z(4), CZ(wires=[0, 4]), X90(wires=[4])]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# configure and run the transpiler\n",
-    "\n",
-    "config = MonarqDefaultConfig(use_benchmark=False)\n",
-    "transpiler = PreProcessor.get_processor(config, [0, 1])\n",
-    "\n",
-    "# since the transpiler function is a transform, you have to index [0][0] in order to get the resulting tape\n",
-    "tape = transpiler(tape)[0][0]\n",
-    "\n",
-    "tape.operations"
+    "See [custom steps](using_custom_steps.ipynb) for mor information."
    ]
   }
  ],
