--- a/doc/using_custom_gates.ipynb
+++ b/doc/using_custom_gates.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "## Custom gates\n",
     "\n",
-    "This plugin provides a set of custom gates that you can use in order to express your quantum circuits in MonarQ's native gate set. \n",
-    "\n",
-    "Here are the operations from MonarQ's native gate set : "
+    "This plugin provides a set of custom gates that you can use in order to express your quantum circuits in MonarQ's native gate set. "
    ]
   },
   {
@@ -60,7 +58,16 @@
     "\n",
     "You might have noticed that we import ```pennylane as qml``` and ```custom_gates as custom```. \n",
     "\n",
-    "That is because not all the gates in MonarQ exist in pennylane. We thus had to add custom pennylane operations in order to cover all of MonarQ's native gate set.   "
+    "That is because not all the native gates in MonarQ exist in pennylane. We thus have to add custom pennylane operations in order to cover all of MonarQ's native gate set. \n",
+    "\n",
+    "All the gates implemented by Calcul Québec reside in the ```custom_gates``` module. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here are the operations from MonarQ's native gate set : "
    ]
   },
   {
