replace snowflurry with calculquebec in doc and toml

--- a/doc/using_api_adapter.ipynb
+++ b/doc/using_api_adapter.ipynb
@@ -40,8 +40,8 @@
     }
    ],
    "source": [
-    "from pennylane_snowflurry.API.adapter import ApiAdapter\n",
-    "from pennylane_snowflurry.API.client import MonarqClient"
+    "from pennylane_calculquebec.API.adapter import ApiAdapter\n",
+    "from pennylane_calculquebec.API.client import MonarqClient"
    ]
   },
   {
