--- a/doc/using_configurations.ipynb
+++ b/doc/using_configurations.ipynb
@@ -45,7 +45,7 @@
     }
    ],
    "source": [
-    "from pennylane_snowflurry.API.client import MonarqClient\n",
+    "from pennylane_calculquebec.API.client import MonarqClient\n",
     "import pennylane as qml\n",
     "\n",
     "# change the information in the client for your credentials\n",
@@ -77,8 +77,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pennylane_snowflurry.processing.config import MonarqDefaultConfig, ProcessingConfig\n",
-    "from pennylane_snowflurry.processing.steps import CliffordTDecomposition, ASTAR, Swaps, IterativeCommuteAndMerge, MonarqDecomposition, DecomposeReadout"
+    "from pennylane_calculquebec.processing.config import MonarqDefaultConfig, ProcessingConfig\n",
+    "from pennylane_calculquebec.processing.steps import CliffordTDecomposition, ASTAR, Swaps, IterativeCommuteAndMerge, MonarqDecomposition, DecomposeReadout"
    ]
   },
   {
@@ -157,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pennylane_snowflurry.processing.config import MonarqDefaultConfig, MonarqDefaultConfigNoBenchmark, NoPlaceNoRouteConfig, EmptyConfig\n",
+    "from pennylane_calculquebec.processing.config import MonarqDefaultConfig, MonarqDefaultConfigNoBenchmark, NoPlaceNoRouteConfig, EmptyConfig\n",
     "\n",
     "# this is the preset that is used by default when you dont set a config manually\n",
     "default = MonarqDefaultConfig()\n",
@@ -272,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
