--- a/doc/using_custom_steps.ipynb
+++ b/doc/using_custom_steps.ipynb
@@ -22,8 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pennylane_snowflurry.processing.config import MonarqDefaultConfig\n",
-    "from pennylane_snowflurry.processing.steps import ReadoutErrorMitigation\n",
+    "from pennylane_calculquebec.processing.config import MonarqDefaultConfig\n",
+    "from pennylane_calculquebec.processing.steps import ReadoutErrorMitigation\n",
     "\n",
     "readout_error_mitigation = ReadoutErrorMitigation()\n",
     "\n",
@@ -45,11 +45,11 @@
    "outputs": [],
    "source": [
     "# abstract steps + empty config\n",
-    "from pennylane_snowflurry.processing.interfaces import PreProcStep, PostProcStep\n",
-    "from pennylane_snowflurry.processing.config import ProcessingConfig\n",
+    "from pennylane_calculquebec.processing.interfaces import PreProcStep, PostProcStep\n",
+    "from pennylane_calculquebec.processing.config import ProcessingConfig\n",
     "\n",
     "# default steps\n",
-    "from pennylane_snowflurry.processing.steps import CliffordTDecomposition, ASTAR, Swaps, IterativeCommuteAndMerge, MonarqDecomposition"
+    "from pennylane_calculquebec.processing.steps import CliffordTDecomposition, ASTAR, Swaps, IterativeCommuteAndMerge, MonarqDecomposition"
    ]
   },
   {
@@ -119,7 +119,7 @@
    ],
    "source": [
     "import pennylane as qml\n",
-    "from pennylane_snowflurry.API.client import MonarqClient\n",
+    "from pennylane_calculquebec.API.client import MonarqClient\n",
     "\n",
     "# Change the values in the parentheses for your credentials\n",
     "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")\n",
@@ -160,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
