--- a/doc/using_client.ipynb
+++ b/doc/using_client.ipynb
@@ -51,7 +51,7 @@
    ],
    "source": [
     "import pennylane as qml\n",
-    "from pennylane_snowflurry.API.client import MonarqClient"
+    "from pennylane_calculquebec.API.client import MonarqClient"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
