--- a/doc/using_custom_gates.ipynb
+++ b/doc/using_custom_gates.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "\n",
     "# import custom gates\n",
-    "import pennylane_snowflurry.processing.custom_gates as custom\n",
+    "import pennylane_calculquebec.processing.custom_gates as custom\n",
     "\n",
     "# import pennylane-specific functions\n",
     "import pennylane as qml\n",
@@ -393,8 +393,8 @@
     }
    ],
    "source": [
-    "from pennylane_snowflurry.processing.config import EmptyConfig\n",
-    "from pennylane_snowflurry.API.client import MonarqClient\n",
+    "from pennylane_calculquebec.processing.config import EmptyConfig\n",
+    "from pennylane_calculquebec.API.client import MonarqClient\n",
     "\n",
     "# change the information in the client for your credentials\n",
     "client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project name\")\n",
@@ -483,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
