--- a/doc/using_transpiler.ipynb
+++ b/doc/using_transpiler.ipynb
@@ -37,7 +37,7 @@
     }
    ],
    "source": [
-    "from pennylane_snowflurry.API.client import MonarqClient\n",
+    "from pennylane_calculquebec.API.client import MonarqClient\n",
     "import pennylane as qml"
    ]
   },
@@ -126,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
