nromalize client name accross doc

--- a/doc/for_developers/using_api_adapter.ipynb
+++ b/doc/for_developers/using_api_adapter.ipynb
@@ -60,11 +60,11 @@
    "outputs": [],
    "source": [
     "# change values in the parentheses for your credentials\n",
-    "client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")\n",
+    "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")\n",
     "\n",
     "# this is typically done behind the scene in the monarq.default device. \n",
     "# Since we're not using the device here, we need to do it explicitely\n",
-    "ApiAdapter.initialize(client)"
+    "ApiAdapter.initialize(my_client)"
    ]
   },
   {
