--- a/doc/for_developers/using_configurations.ipynb
+++ b/doc/for_developers/using_configurations.ipynb
@@ -240,19 +240,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# change the information in the client for your credentials\n",
-    "client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project name\")\n",
-    "\n",
-    "dev = qml.device(\"monarq.default\", shots=1000, client = client)\n",
+    "dev = qml.device(\"monarq.default\", shots=1000, client = my_client)\n",
     "\n",
     "# the former is the same as doing the latter\n",
     "\n",
-    "# change the information in the client for your credentials\n",
-    "client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project name\")\n",
-    "\n",
     "my_config = MonarqDefaultConfig()\n",
     "\n",
-    "dev = qml.device(\"monarq.default\", shots=1000, client = client, processing_config=my_config)"
+    "dev = qml.device(\"monarq.default\", shots=1000, client = my_client, processing_config=my_config)"
    ]
   }
  ],
