--- a/doc/for_developers/using_custom_gates.ipynb
+++ b/doc/for_developers/using_custom_gates.ipynb
@@ -397,13 +397,13 @@
     "from pennylane_calculquebec.API.client import MonarqClient\n",
     "\n",
     "# change the information in the client for your credentials\n",
-    "client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project name\")\n",
+    "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project name\")\n",
     "\n",
     "# say you want to transpile your circuit by yourself\n",
     "config = EmptyConfig() \n",
     "\n",
     "# create a device that uses the empty configuration\n",
-    "dev = qml.device(\"monarq.default\", shots=1000, client = client, processing_config = config)\n",
+    "dev = qml.device(\"monarq.default\", shots=1000, client = my_client, processing_config = config)\n",
     "\n",
     "# This would be equivalent to a bell state (Hadamard(0), CNOT([0, 1]))\n",
     "# If we observe MonarQ's connectivity, we find that qubits 0 and 4 are adjacent\n",
