--- a/doc/for_developers/using_transpiler.ipynb
+++ b/doc/for_developers/using_transpiler.ipynb
@@ -56,10 +56,10 @@
    ],
    "source": [
     "# change the information in the client for your credentials\n",
-    "client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")\n",
+    "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")\n",
     "\n",
     "# no configuration argument => config is set to MonarqDefaultConfig\n",
-    "dev = qml.device(\"monarq.default\", shots=1000, wires=[0, 1, 2], client=client) \n",
+    "dev = qml.device(\"monarq.default\", shots=1000, wires=[0, 1, 2], client=my_client) \n",
     "\n",
     "@qml.qnode(dev)\n",
     "def circuit():\n",
