--- a/doc/getting_started.ipynb
+++ b/doc/getting_started.ipynb
@@ -61,7 +61,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\bouch\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pennylane\\__init__.py:200: PennyLaneDeprecationWarning: Device will no longer be accessible top level. Please access the class as pennylane.devices.LegacyDevice\n",
+      "c:\\Users\\bouch\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pennylane\\__init__.py:200: PennyLaneDeprecationWarning: Device will no longer be accessible top level. Please access the class as pennylane.devices.LegacyDevice\n",
       "  warn(\n"
      ]
     }
@@ -71,7 +71,7 @@
     "import pennylane as qml\n",
     "\n",
     "# this line imports the client class which is required for authenticating with MonarQ\n",
-    "from pennylane_snowflurry.API.client import MonarqClient"
+    "from pennylane_calculquebec.API.client import MonarqClient"
    ]
   },
   {
@@ -83,14 +83,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# This is how you create a client. Change the values in the parentheses for your credentials\n",
     "# project is optional. It will be set to default if you don't specify it\n",
-    "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")"
+    "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")\n",
+    "\n",
+    "from dotenv import dotenv_values\n",
+    "env = dotenv_values(\".env\")\n",
+    "my_client = MonarqClient(env[\"HOST\"], env[\"USER\"], env[\"ACCESS_TOKEN\"])"
    ]
   },
   {
@@ -106,17 +110,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# If you dont set any wires or shots, MonarQ will determine the wires based on your circuit, and will do one shot. \n",
-    "dev = qml.device(\"monarq.default\", client=my_client)\n",
-    "\n",
-    "# You can set the wire amount explicitely\n",
-    "dev = qml.device(\"monarq.default\", client=my_client, wires=3) # this will set wires = [0, 1, 2]. ie 3 wires\n",
-    "\n",
     "# You can set any amount of shots up to 1000\n",
-    "dev = qml.device(\"monarq.default\", client=my_client, shots=512)\n",
+    "dev = qml.device(\"monarq.default\", client=my_client, shots=1000)\n",
     "\n",
     "# You can also set which wires you want to act on explicitely\n",
-    "dev = qml.device(\"monarq.default\", client=my_client, wires=[0, 1, 2], shots=1000)"
+    "dev = qml.device(\"monarq.default\", client=my_client, wires=[0, 1, 2], shots=1000)\n",
+    "\n",
+    "# You can set the wire amount explicitely\n",
+    "dev = qml.device(\"monarq.default\", client=my_client, wires=3) # this will set wires = [0, 1, 2]. ie 3 wires\n"
    ]
   },
   {
@@ -160,7 +161,7 @@
     "    # this is a CNOT gate. it connects qubits 0 and 1. \n",
     "    qml.CNOT(wires=[0, 1]) \n",
     "    # this is also a CNOT gate, but it acts on qubits 1 and 2\n",
-    "    qml.CNOT([1, 2])\n",
+    "    qml.CNOT(wires=[1, 2])\n",
     "    \n",
     "    # this will measure every wire from the circuit (3 wires in this case). \n",
     "    # You can also set which wires you want to measure using the wires argument\n",
@@ -235,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
