--- a/doc/for_developers/using_custom_steps.ipynb
+++ b/doc/for_developers/using_custom_steps.ipynb
@@ -18,17 +18,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pennylane_calculquebec.processing.steps.decompose_readout.DecomposeReadout object at 0x000001FF94369600>\n",
+      "<pennylane_calculquebec.processing.steps.base_decomposition.CliffordTDecomposition object at 0x000001FF94369E40>\n",
+      "<pennylane_calculquebec.processing.steps.placement.ISMAGS object at 0x000001FF94369B40>\n",
+      "<pennylane_calculquebec.processing.steps.routing.Swaps object at 0x000001FF943691B0>\n",
+      "<pennylane_calculquebec.processing.steps.optimization.IterativeCommuteAndMerge object at 0x000001FF94369990>\n",
+      "<pennylane_calculquebec.processing.steps.native_decomposition.MonarqDecomposition object at 0x000001FF943BF850>\n",
+      "<pennylane_calculquebec.processing.steps.optimization.IterativeCommuteAndMerge object at 0x000001FF943BF6A0>\n",
+      "<pennylane_calculquebec.processing.steps.native_decomposition.MonarqDecomposition object at 0x000001FF943BF0A0>\n",
+      "<pennylane_calculquebec.processing.steps.readout_error_mitigation.IBUReadoutMitigation object at 0x000001FF94369240>\n"
+     ]
+    }
+   ],
    "source": [
     "from pennylane_calculquebec.processing.config import MonarqDefaultConfig\n",
-    "from pennylane_calculquebec.processing.steps import ReadoutErrorMitigation\n",
+    "from pennylane_calculquebec.processing.steps import IBUReadoutMitigation\n",
     "\n",
-    "readout_error_mitigation = ReadoutErrorMitigation()\n",
+    "readout_error_mitigation = IBUReadoutMitigation()\n",
     "\n",
     "my_config = MonarqDefaultConfig()\n",
-    "my_config.steps.append(readout_error_mitigation)"
+    "my_config.steps.append(readout_error_mitigation)\n",
+    "print(*my_config.steps, sep=\"\\n\")"
    ]
   },
   {
@@ -40,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,9 +90,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.PrintCircuit object at 0x000001FFDD2FE050>\n",
+      "<pennylane_calculquebec.processing.steps.base_decomposition.CliffordTDecomposition object at 0x000001FFDD2FE110>\n",
+      "<pennylane_calculquebec.processing.steps.placement.ASTAR object at 0x000001FFDD2FFFD0>\n",
+      "<pennylane_calculquebec.processing.steps.routing.Swaps object at 0x000001FF94369B70>\n",
+      "<pennylane_calculquebec.processing.steps.optimization.IterativeCommuteAndMerge object at 0x000001FF94368A00>\n",
+      "<pennylane_calculquebec.processing.steps.native_decomposition.MonarqDecomposition object at 0x000001FF943695D0>\n",
+      "<__main__.PrintCircuit object at 0x000001FF94368250>\n",
+      "<__main__.PrintResults object at 0x000001FF94368E50>\n",
+      "<pennylane_calculquebec.processing.steps.readout_error_mitigation.IBUReadoutMitigation object at 0x000001FF9436A170>\n",
+      "<__main__.PrintResults object at 0x000001FF94369ED0>\n"
+     ]
+    }
+   ],
    "source": [
     "# this custom config will print the circuit, transpile, print the transpiled circuit \n",
     "# and then print the unmitigated results, followed by the mitigated results.\n",
@@ -87,8 +121,9 @@
     "                             MonarqDecomposition(), \n",
     "                             PrintCircuit(),\n",
     "                             PrintResults(),\n",
-    "                             ReadoutErrorMitigation(), \n",
-    "                             PrintResults())\n"
+    "                             IBUReadoutMitigation(), \n",
+    "                             PrintResults())\n",
+    "print(*my_config.steps, sep=\"\\n\")"
    ]
   },
   {
@@ -100,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -111,9 +146,9 @@
       "1: ────╰X─╭●─┤  Counts\n",
       "2: ───────╰X─┤  Counts\n",
       "H(0) CNOT(wires=[0, 1]) CNOT(wires=[1, 2])\n",
-      "X90(wires=[1]) X90(wires=[4]) Z(4) CZ(wires=[1, 4]) X90(wires=[4]) X90(wires=[0]) Z(0) CZ(wires=[4, 0]) X90(wires=[0])\n",
-      "{'000': 376, '001': 38, '010': 44, '011': 58, '100': 126, '101': 65, '110': 98, '111': 195}\n",
-      "{'000': 418.0, '001': 16.0, '010': 12.0, '011': 61.0, '100': 87.0, '101': 20.0, '110': 71.0, '111': 315.0}\n"
+      "X90(wires=[1]) X90(wires=[0]) Z(0) CZ(wires=[4, 0]) X90(wires=[0]) X90(wires=[4]) Z(0) Z(4) CZ(wires=[0, 4]) X90(wires=[4]) X90(wires=[0]) Z(4) Z(0) CZ(wires=[4, 0]) X90(wires=[4]) Z(4) CZ(wires=[1, 4]) X90(wires=[4]) Z(4) CZ(wires=[4, 0]) X90(wires=[0]) X90(wires=[4]) Z(0) Z(4) CZ(wires=[0, 4]) X90(wires=[4]) X90(wires=[0]) Z(4) Z(0) CZ(wires=[4, 0]) X90(wires=[0]) X90(wires=[4]) Z(4) CZ(wires=[0, 4]) X90(wires=[4])\n",
+      "{'000': 428, '001': 51, '010': 26, '011': 60, '100': 75, '101': 75, '110': 72, '111': 213}\n",
+      "{'000': 465, '001': 38, '010': 5, '011': 56, '100': 37, '101': 64, '110': 44, '111': 290}\n"
      ]
     }
    ],
