--- a/doc/for_developers/using_api_adapter.ipynb
+++ b/doc/for_developers/using_api_adapter.ipynb
@@ -20,25 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Detected IPython. Loading juliacall extension. See https://juliapy.github.io/PythonCall.jl/stable/compat/#IPython\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\bouch\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pennylane\\__init__.py:200: PennyLaneDeprecationWarning: Device will no longer be accessible top level. Please access the class as pennylane.devices.LegacyDevice\n",
-      "  warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pennylane_calculquebec.API.adapter import ApiAdapter\n",
     "from pennylane_calculquebec.API.client import MonarqClient"
@@ -55,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,14 +67,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'0': {'readoutState0Fidelity': 0.97, 'readoutState1Fidelity': 0.821, 'singleQubitGateFidelity': 0.9982814081021721, 't1': 6.01428105501347e-06, 't2Echo': 3.770898474202085e-06, 't2Ramsey': 6.7844378802770695e-06}, '1': {'readoutState0Fidelity': 0.929, 'readoutState1Fidelity': 0.909, 'singleQubitGateFidelity': 0.9978611018190813, 't1': 6.128078273823985e-06, 't2Echo': 3.0421805738496045e-06, 't2Ramsey': 1.5620660324981514e-06}, '10': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '11': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '12': {'readoutState0Fidelity': 0.972, 'readoutState1Fidelity': 0.775, 'singleQubitGateFidelity': 0.9976718216752923, 't1': 1.1948400000000007e-05, 't2Echo': 3.252317641088996e-06, 't2Ramsey': 1.4879581575345734e-06}, '13': {'readoutState0Fidelity': 0.934, 'readoutState1Fidelity': 0.818, 'singleQubitGateFidelity': 0.9970520261183451, 't1': 1.038220341215098e-05, 't2Echo': 2.4986421447312525e-06, 't2Ramsey': 8.707318292372206e-07}, '14': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '15': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '16': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '17': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '18': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '19': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '2': {'readoutState0Fidelity': 0.978, 'readoutState1Fidelity': 0.862, 'singleQubitGateFidelity': 0.9964833377478641, 't1': 1.0077600000000005e-05, 't2Echo': 3.266427718295267e-06, 't2Ramsey': 1.0027838273322417e-06}, '20': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '21': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '22': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '23': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '3': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '4': {'readoutState0Fidelity': 0.954, 'readoutState1Fidelity': 0.807, 'singleQubitGateFidelity': 0.9979704985784132, 't1': 9.454000000000005e-06, 't2Echo': 3.2619329337979787e-06, 't2Ramsey': 5.194654051845565e-06}, '5': {'readoutState0Fidelity': 0.96, 'readoutState1Fidelity': 0.796, 'singleQubitGateFidelity': 0.9977556210401504, 't1': 9.92703421241762e-06, 't2Echo': 3.0389732006107927e-06, 't2Ramsey': 1.6259483038131084e-06}, '6': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '7': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '8': {'readoutState0Fidelity': 0.982, 'readoutState1Fidelity': 0.875, 'singleQubitGateFidelity': 0.995641079766664, 't1': 7.092324416115725e-06, 't2Echo': 3.403353323818065e-06, 't2Ramsey': 1.3514804996020841e-06}, '9': {'readoutState0Fidelity': 0.963, 'readoutState1Fidelity': 0.901, 'singleQubitGateFidelity': 0.9955825055025334, 't1': 9.507980001406552e-06, 't2Echo': 2.255053129115287e-06, 't2Ramsey': 1.7136623348122696e-06}}\n",
-      "{'0': {'czGateFidelity': 0.9456574025625567}, '1': {'czGateFidelity': 0.964086847311285}, '10': {'czGateFidelity': 0}, '11': {'czGateFidelity': 0}, '12': {'czGateFidelity': 0}, '13': {'czGateFidelity': 0}, '14': {'czGateFidelity': 0.9723060760518619}, '15': {'czGateFidelity': 0.9514801673796651}, '16': {'czGateFidelity': 0.9627747826140924}, '17': {'czGateFidelity': 0}, '18': {'czGateFidelity': 0}, '19': {'czGateFidelity': 0}, '2': {'czGateFidelity': 0.9584818210082663}, '20': {'czGateFidelity': 0}, '21': {'czGateFidelity': 0}, '22': {'czGateFidelity': 0}, '23': {'czGateFidelity': 0}, '24': {'czGateFidelity': 0}, '25': {'czGateFidelity': 0}, '26': {'czGateFidelity': 0}, '27': {'czGateFidelity': 0}, '28': {'czGateFidelity': 0}, '29': {'czGateFidelity': 0}, '3': {'czGateFidelity': 0.9409482287032152}, '30': {'czGateFidelity': 0}, '31': {'czGateFidelity': 0}, '32': {'czGateFidelity': 0}, '33': {'czGateFidelity': 0}, '34': {'czGateFidelity': 0}, '4': {'czGateFidelity': 0}, '5': {'czGateFidelity': 0}, '6': {'czGateFidelity': 0}, '7': {'czGateFidelity': 0.9264990819748266}, '8': {'czGateFidelity': 0.9718329245497327}, '9': {'czGateFidelity': 0.9671227754844716}}\n"
+      "{'0': {'readoutState0Fidelity': 0.979, 'readoutState1Fidelity': 0.906, 'singleQubitGateFidelity': 0.9977433977713744, 't1': 8.830400000000006e-06, 't2Echo': 5.205614618548137e-06, 't2Ramsey': 1.882812508909129e-06}, '1': {'readoutState0Fidelity': 0.94, 'readoutState1Fidelity': 0.922, 'singleQubitGateFidelity': 0.9984912579140293, 't1': 1.0289645663289292e-05, 't2Echo': 3.409367080463737e-06, 't2Ramsey': 1.4553323031534182e-06}, '10': {'readoutState0Fidelity': 0.972, 'readoutState1Fidelity': 0.9, 'singleQubitGateFidelity': 0.997125592562792, 't1': 1.0208792689179017e-05, 't2Echo': 2.6758960828637018e-06, 't2Ramsey': 9.165289123310411e-07}, '11': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '12': {'readoutState0Fidelity': 0.947, 'readoutState1Fidelity': 0.747, 'singleQubitGateFidelity': 0.9986027867579164, 't1': 7.932343011780466e-06, 't2Echo': 4.318855521479918e-06, 't2Ramsey': 1.1335636934049613e-06}, '13': {'readoutState0Fidelity': 0.945, 'readoutState1Fidelity': 0.799, 'singleQubitGateFidelity': 0.9983035332000202, 't1': 1.0675639903774602e-05, 't2Echo': 4.014285365826254e-06, 't2Ramsey': 8.570606980560558e-07}, '14': {'readoutState0Fidelity': 0.963, 'readoutState1Fidelity': 0.77, 'singleQubitGateFidelity': 0.9985670806460676, 't1': 1.0353441802605326e-05, 't2Echo': 5.317118439603119e-06, 't2Ramsey': 1.5265669929204049e-06}, '15': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '16': {'readoutState0Fidelity': 0.927, 'readoutState1Fidelity': 0.787, 'singleQubitGateFidelity': 0.997630506590207, 't1': 8.536411902676097e-06, 't2Echo': 5.078312431947735e-07, 't2Ramsey': 1.79071891679051e-06}, '17': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '18': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '19': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '2': {'readoutState0Fidelity': 0.981, 'readoutState1Fidelity': 0.894, 'singleQubitGateFidelity': 0.9977343337955233, 't1': 6.741879913618841e-06, 't2Echo': 2.446845666248178e-06, 't2Ramsey': 1.1220530815180066e-06}, '20': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '21': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '22': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '23': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '3': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '4': {'readoutState0Fidelity': 0.976, 'readoutState1Fidelity': 0.861, 'singleQubitGateFidelity': 0.9986328407367754, 't1': 1.0385287381657637e-05, 't2Echo': 1.2448994227482198e-05, 't2Ramsey': 3.4820780872156867e-06}, '5': {'readoutState0Fidelity': 0.957, 'readoutState1Fidelity': 0.764, 'singleQubitGateFidelity': 0.9968195003639814, 't1': 7.2571559435525455e-06, 't2Echo': 3.2915005626689446e-06, 't2Ramsey': 8.842188753619543e-07}, '6': {'readoutState0Fidelity': 0.96, 'readoutState1Fidelity': 0.847, 'singleQubitGateFidelity': 0.9978990125161881, 't1': 9.043168983097688e-06, 't2Echo': 3.473647967375516e-06, 't2Ramsey': 8.866367604005491e-07}, '7': {'readoutState0Fidelity': 0, 'readoutState1Fidelity': 0, 'singleQubitGateFidelity': 0, 't1': 0, 't2Echo': 0, 't2Ramsey': 0}, '8': {'readoutState0Fidelity': 0.982, 'readoutState1Fidelity': 0.901, 'singleQubitGateFidelity': 0.9965954681018494, 't1': 7.59105934773134e-06, 't2Echo': 3.913557574682079e-06, 't2Ramsey': 1.6298263860144835e-06}, '9': {'readoutState0Fidelity': 0.972, 'readoutState1Fidelity': 0.853, 'singleQubitGateFidelity': 0.9955389744260127, 't1': 1.2168355976774058e-05, 't2Echo': 4.311081266567357e-06, 't2Ramsey': 1.7822262822977233e-06}}\n",
+      "{'0': {'czGateFidelity': 0.9796714999553546}, '1': {'czGateFidelity': 0.9776143759174871}, '10': {'czGateFidelity': 0}, '11': {'czGateFidelity': 0.9622816478502767}, '12': {'czGateFidelity': 0}, '13': {'czGateFidelity': 0}, '14': {'czGateFidelity': 0.9775020153215083}, '15': {'czGateFidelity': 0.9758706552194334}, '16': {'czGateFidelity': 0.9708896279863461}, '17': {'czGateFidelity': 0.948939398756107}, '18': {'czGateFidelity': 0.9643146701832452}, '19': {'czGateFidelity': 0}, '2': {'czGateFidelity': 0.9661746336047137}, '20': {'czGateFidelity': 0}, '21': {'czGateFidelity': 0.9805307084877747}, '22': {'czGateFidelity': 0}, '23': {'czGateFidelity': 0}, '24': {'czGateFidelity': 0}, '25': {'czGateFidelity': 0}, '26': {'czGateFidelity': 0}, '27': {'czGateFidelity': 0}, '28': {'czGateFidelity': 0}, '29': {'czGateFidelity': 0}, '3': {'czGateFidelity': 0.9536002497122048}, '30': {'czGateFidelity': 0}, '31': {'czGateFidelity': 0}, '32': {'czGateFidelity': 0}, '33': {'czGateFidelity': 0}, '34': {'czGateFidelity': 0}, '4': {'czGateFidelity': 0.9634306218834638}, '5': {'czGateFidelity': 0}, '6': {'czGateFidelity': 0}, '7': {'czGateFidelity': 0.9607635631614275}, '8': {'czGateFidelity': 0.9749923866437409}, '9': {'czGateFidelity': 0.9354044218366531}}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'2024-12-03T13:05:58.424Z'"
+       "'2024-12-18T13:30:54.649Z'"
       ]
      },
      "execution_count": 4,
@@ -133,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
