--- a/doc/getting_started.ipynb
+++ b/doc/getting_started.ipynb
@@ -47,25 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Detected IPython. Loading juliacall extension. See https://juliapy.github.io/PythonCall.jl/stable/compat/#IPython\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\bouch\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pennylane\\__init__.py:200: PennyLaneDeprecationWarning: Device will no longer be accessible top level. Please access the class as pennylane.devices.LegacyDevice\n",
-      "  warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# this line imports the pennylane library. It contains everything necessary for quantum programming\n",
     "import pennylane as qml\n",
@@ -83,18 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# This is how you create a client. Change the values in the parentheses for your credentials\n",
     "# project is optional. It will be set to default if you don't specify it\n",
-    "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")\n",
-    "\n",
-    "from dotenv import dotenv_values\n",
-    "env = dotenv_values(\".env\")\n",
-    "my_client = MonarqClient(env[\"HOST\"], env[\"USER\"], env[\"ACCESS_TOKEN\"])"
+    "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")\n"
    ]
   },
   {
@@ -105,19 +85,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 3 mandatory arguments for the device : \n",
+    "1. the name ```monarq.default```\n",
+    "2. a client\n",
+    "3. a number of shots (from 1 to 1000)\n",
+    "\n",
+    "There are 2 optional arguments : \n",
+    "1. a number of wire or the exact wires (as an array)\n",
+    "2. a [configuration](./for_developers/using_configurations.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You can set any amount of shots up to 1000\n",
-    "dev = qml.device(\"monarq.default\", client=my_client, shots=1000)\n",
+    "# You can set the wire amount (creating a range of wires from 0 inclusive to n exclusive)\n",
+    "dev = qml.device(\"monarq.default\", client=my_client, shots=1000, wires=3) # this will set wires = [0, 1, 2]. ie 3 wires\n",
     "\n",
     "# You can also set which wires you want to act on explicitely\n",
-    "dev = qml.device(\"monarq.default\", client=my_client, wires=[0, 1, 2], shots=1000)\n",
+    "dev = qml.device(\"monarq.default\", client=my_client, shots=1000, wires=[4, 1, 5]) # this will set wires = [4, 1, 5\n",
     "\n",
-    "# You can set the wire amount explicitely\n",
-    "dev = qml.device(\"monarq.default\", client=my_client, wires=3) # this will set wires = [0, 1, 2]. ie 3 wires\n"
+    "# You don't have to set any wires. This will rely on wires that have been used on operations and measurements from the circuit\n",
+    "dev = qml.device(\"monarq.default\", client=my_client, shots=1000)\n"
    ]
   },
   {
@@ -138,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -188,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'000': 402, '001': 38, '010': 27, '011': 55, '100': 130, '101': 47, '110': 107, '111': 194}\n"
+      "{'000': 408, '001': 68, '010': 51, '011': 65, '100': 36, '101': 41, '110': 89, '111': 242}\n"
      ]
     }
    ],
